# python-graphql-lisfy

./: README.md  pyproject.toml
src/graphql_lisfy/: __main__.py  reader.py  rep.py  types.py
src/graphql_lisfy/subr/: reader.py
